# Dokumen-Pintar

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.id.md  README.md  README.pypi.md  dokumen-pintar.config.example.json  pyproject.toml  smithery.yaml
.github/workflows/: publish.yml
assets/: README.md
docs/: ARCHITECTURE.md  BENCHMARK.md  CONFIG.md  TOOLS.md  USAGE.md  config.schema.json
docs/profiles/: README.md  developer.json  minimal.json  personal.json  read-only.json  research.json  team-server.json
src/dokumen_pintar/: __init__.py  audit.py  cli.py  config.py  context.py  errors.py  extract_cache.py  pathguard.py  server.py  versioning.py
src/dokumen_pintar/authoring/: __init__.py  markdown_to_spec.py  render_docx.py  render_markdown.py  render_pdf.py  spec.py
src/dokumen_pintar/handlers/: __init__.py  base.py  csv_handler.py  docx_handler.py  image_handler.py  json_yaml_handler.py  latex_handler.py  markdown_handler.py  pdf_handler.py  pptx_handler.py  text_handler.py  xlsx_handler.py  xml_handler.py
src/dokumen_pintar/lint/: __init__.py  base.py  presets_id.py  rules.py
src/dokumen_pintar/semantic/: __init__.py  index.py
src/dokumen_pintar/tools/: __init__.py  _common.py  authoring.py  batch.py  batch_structured.py  bibliography.py  compare.py  content_crud.py  file_crud.py  images.py  lint.py  metadata.py  search.py  sections.py  structured.py  templates.py  toc.py  version.py  workspace.py
src/dokumen_pintar/utils/: encoding.py  globbing.py  locks.py  mime.py  stemming_id.py  walking.py
templates/academic_id/kp_basic/: README.md  manifest.json  template.docx
tests/: conftest.py  test_audit.py  test_authoring_markdown_to_spec.py  test_authoring_render_docx.py  test_authoring_render_pdf.py  test_authoring_spec.py  test_cli.py  test_config.py  test_context_build.py  test_errors.py  test_extract_cache.py  test_handlers_base.py  test_handlers_csv.py  test_handlers_docx.py  test_handlers_json_yaml.py  test_handlers_latex.py  test_handlers_markdown.py  test_handlers_pdf.py  test_handlers_pptx.py  test_handlers_text.py  test_handlers_xlsx.py  test_handlers_xml.py  test_metadata_layer.py  test_pathguard.py  test_server.py  test_tools_authoring.py  test_tools_batch.py  test_tools_batch_structured.py  test_tools_bibliography.py  test_tools_common.py  test_tools_compare.py  test_tools_content_crud.py  test_tools_file_crud.py  test_tools_images.py  test_tools_lint.py  test_tools_search.py  test_tools_sections.py  test_tools_structured.py  test_tools_templates.py  test_tools_toc.py  (+9 more)
