[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dokumen-pintar"
version = "1.0.2"
description = "MCP server universal untuk CRUD dokumen lintas format (text, JSON, YAML, CSV, XML, DOCX, XLSX, PPTX, PDF) dengan versioning, sandboxed multi-root, search, batch, dan semantic search opsional."
readme = "README.pypi.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "firdausmntp", email = "firdausmntp@users.noreply.github.com" }]
keywords = ["mcp", "documents", "crud", "office", "pdf", "search"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "mcp>=1.2.0",
    "anyio>=4.4",
    "pydantic>=2.7",
    "platformdirs>=4.2",
    "filelock>=3.15",
    "charset-normalizer>=3.3",
    "ruamel.yaml>=0.18",
    "jsonpath-ng>=1.6",
    "lxml>=5.2",
    "pandas>=2.2",
    "openpyxl>=3.1",
    "python-docx>=1.1",
    "python-pptx>=0.6.23",
    "pypdf>=4.3",
    "pdfplumber>=0.11",
    "pikepdf>=9.0",
    "reportlab>=4.2",
    "markdown-it-py>=3.0",
    "mdit-py-plugins>=0.4",
    "pylatexenc>=2.10",
    "Pillow>=10.0",
    "piexif>=1.1",
    "rapidfuzz>=3.9",
    "watchfiles>=0.22",
    "starlette>=0.37",
    "uvicorn>=0.30",
    "sse-starlette>=2.1",
]

[project.optional-dependencies]
semantic = [
    "sentence-transformers>=3.0",
    "numpy>=1.26",
    "scikit-learn>=1.5",
]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.urls]
Homepage = "https://github.com/firdausmntp/Dokumen-Pintar"
Repository = "https://github.com/firdausmntp/Dokumen-Pintar.git"
Issues = "https://github.com/firdausmntp/Dokumen-Pintar/issues"
Documentation = "https://github.com/firdausmntp/Dokumen-Pintar/tree/main/docs"

[project.scripts]
dokumen-pintar = "dokumen_pintar.server:main"
dokumen-pintar-init = "dokumen_pintar.cli:init_config"
dokumen-pintar-doctor = "dokumen_pintar.cli:doctor"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"dokumen_pintar" = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "-n", "auto",
    "--cov=dokumen_pintar",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-config=pyproject.toml",
]

[tool.coverage.run]
source = ["dokumen_pintar"]
branch = true
omit = [
    "*/semantic/*",
]

[tool.coverage.report]
show_missing = true
precision = 2
exclude_lines = [
    "pragma: no cover",
    "if __name__",
    "if TYPE_CHECKING",
    "if ctx.config.semantic_search.enabled",
    "raise NotImplementedError",
    "@overload",
]
fail_under = 100
